Updated content new thanks page
index.html: :100: Renamed Religious Convictions to Convictions;
thanks.html: New Thank you page after Contact form;
thanks.jade: Using new preprocessed language jade;
prepros.cfg: Preprocessor file;

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2363,6 +2363,19 @@
           "optimized": false,
           "height": 1200,
           "width": 1920
+        },
+        "7dcbc253": {
+          "id": "7dcbc253",
+          "path": "thanks.jade",
+          "output": "thanks.html",
+          "name": "thanks.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
