--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2376,6 +2376,30 @@
           "imported": false,
           "parents": [],
           "type": "jade"
+        },
+        "b3ef0e04": {
+          "id": "b3ef0e04",
+          "path": "thanks.html",
+          "output": "thanks.html",
+          "name": "thanks.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7a5f6377": {
+          "id": "7a5f6377",
+          "path": "images/bird-bg.jpg",
+          "output": "images/bird-bg.jpg",
+          "name": "bird-bg.jpg",
+          "category": "IMAGE",
+          "size": 133060,
+          "type": "jpg",
+          "initialSize": 133060,
+          "optimized": false,
+          "height": 600,
+          "width": 1164
         }
       },
       "deploymentHistory": {},
