--- a/prepros.cfg
+++ b/prepros.cfg
@@ -38,10 +38,10 @@
           "output": "animusic/assets/img/play-sprite.png",
           "name": "play-sprite.png",
           "category": "IMAGE",
-          "size": 1360,
+          "size": 1177,
           "type": "png",
           "initialSize": 1360,
-          "optimized": false,
+          "optimized": true,
           "height": 140,
           "width": 70
         },
@@ -244,17 +244,6 @@
           "parents": [],
           "type": "html"
         },
-        "000c1420": {
-          "id": "000c1420",
-          "path": "notes/meteor.html",
-          "output": "notes/meteor.html",
-          "name": "meteor.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "9a91964f": {
           "id": "9a91964f",
           "path": "js/combine.js",
@@ -395,21 +384,6 @@
           "path": "js/nooptimize.js",
           "output": "js/nooptimize-dist.js",
           "name": "nooptimize.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "a6463782": {
-          "id": "a6463782",
-          "path": "js/scrollReveal.js",
-          "output": "js/scrollReveal-dist.js",
-          "name": "scrollReveal.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -2279,10 +2253,10 @@
           "output": "animusic/thumbnail.png",
           "name": "thumbnail.png",
           "category": "IMAGE",
-          "size": 67858,
+          "size": 40810,
           "type": "png",
           "initialSize": 67858,
-          "optimized": false,
+          "optimized": true,
           "height": 655,
           "width": 711
         },
@@ -2292,10 +2266,10 @@
           "output": "images/divider.png",
           "name": "divider.png",
           "category": "IMAGE",
-          "size": 1017,
+          "size": 605,
           "type": "png",
           "initialSize": 1017,
-          "optimized": false,
+          "optimized": true,
           "height": 35,
           "width": 300
         },
@@ -2318,10 +2292,10 @@
           "output": "animusic/assets/img/big-spinner.png",
           "name": "big-spinner.png",
           "category": "IMAGE",
-          "size": 40743,
+          "size": 34136,
           "type": "png",
           "initialSize": 40743,
-          "optimized": false,
+          "optimized": true,
           "height": 327,
           "width": 327
         },
@@ -2331,10 +2305,10 @@
           "output": "animusic/assets/img/spinner-center.png",
           "name": "spinner-center.png",
           "category": "IMAGE",
-          "size": 5110,
+          "size": 3702,
           "type": "png",
           "initialSize": 5110,
-          "optimized": false,
+          "optimized": true,
           "height": 200,
           "width": 200
         },
@@ -2344,10 +2318,10 @@
           "output": "animusic/assets/img/spinner-outer.png",
           "name": "spinner-outer.png",
           "category": "IMAGE",
-          "size": 30595,
+          "size": 24751,
           "type": "png",
           "initialSize": 30595,
-          "optimized": false,
+          "optimized": true,
           "height": 327,
           "width": 327
         },
@@ -2357,10 +2331,10 @@
           "output": "images/sunset.jpg",
           "name": "sunset.jpg",
           "category": "IMAGE",
-          "size": 320272,
+          "size": 314941,
           "type": "jpg",
           "initialSize": 320272,
-          "optimized": false,
+          "optimized": true,
           "height": 1200,
           "width": 1920
         },
@@ -2388,18 +2362,42 @@
           "parents": [],
           "type": "html"
         },
-        "7a5f6377": {
-          "id": "7a5f6377",
-          "path": "images/bird-bg.jpg",
-          "output": "images/bird-bg.jpg",
-          "name": "bird-bg.jpg",
-          "category": "IMAGE",
-          "size": 133060,
-          "type": "jpg",
-          "initialSize": 133060,
-          "optimized": false,
-          "height": 600,
-          "width": 1164
+        "e8fb32d5": {
+          "id": "e8fb32d5",
+          "path": "js/functions.js",
+          "output": "js/functions-dist.js",
+          "name": "functions.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e3432de9": {
+          "id": "e3432de9",
+          "path": "animusic/README.html",
+          "output": "animusic/README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -2410,7 +2408,7 @@
         "port": 0,
         "useCustomPort": false,
         "customServerUrl": "",
-        "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html,htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
+        "watchedFileExtensions": "less, sass, scss, styl, md, markdown, coffee, js, jade, haml, slim, ls, html, htm, css, rb, php, asp, aspx, cfm, chm, cms, do, erb, jsp, mhtml, mspx, pl, py, shtml, cshtml, cs,vb, vbs, tpl, ctp, kit, png, jpg, jpeg",
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
         "autoprefixerBrowsers": "last 4 versions",
         "liveRefreshDelay": 0,
